syntax = "proto3";

package pb;

option go_package = "github.com/phongnd2802/go-ecommerce-microservices/pb/user";

message SetPasswordRequest {
    string token = 1;
    string password = 2;
}

message SetPasswordResponse {}
